Other changes:
 * The various configuration options in the Calcs tab have been moved to a new Configuration tab
	* Moving these into a dedicated tab will provide room for more options to be added in the future
    * The names of many options have been changed to clarify their function
	* Some options now have tooltips that explain aspects of their function
 * Support gem compatability is now determined using the same data the game itself uses, and should now be 100% accurate
VERSION[1.1.11][2016/10/25]
 * Added flat mana to ES armour rare templates
VERSION[1.1.10][2016/10/23]
 * Added support for the poison-at-max-frenzy modifier on Snakebite
VERSION[1.1.9][2016/10/07]
 * Added flat chaos damage to all physical weapon templates
VERSION[1.1.8][2016/10/04]
 * Added support for the "Your flasks grant" modifiers on Doryani's Invitation
 * Detection of the Unarmed state now ignores the offhand
 * Added resistance breakdown section to the Calcs tab
VERSION[1.1.7][2016/10/03]
 * Fixed stun modifiers from several active and support gems
VERSION[1.1.6][2016/10/02]
 * Fixed bug causing issues with the new jewel attribute totals when a jewel is used multiple times
VERSION[1.1.5][2016/10/01]
 * Jewel tooltips now show totals for any relevant attributes (Str, Dex, Int) allocated within their radius
    * For example, Eldritch Knowledge shows Intelligence, and Spire of Stone shows Strength
    * For unsupported radius jewels (particularly threshold jewels) all attributes are shown by default
 * Fixed crit chance with Trypanon deviating from 100% under some conditions
VERSION[1.1.4][2016/09/30]
 * The tooltip for socket groups now includes gems which aren't part of any of the group's active skills
    * This includes gems which aren't supported, or are disabled, and any support gems which can't apply to the active skills
 * Made some minor tweaks to the rounding in the damage calculations
VERSION[1.1.3][2016/09/26]